--- a/src/components/input/styles.css
+++ b/src/components/input/styles.css
@@ -1,7 +1,7 @@
 .app-input{
     padding: 10px;
     text-align: center;
-    background-color: coral;
+    background-color: grey;
     border-radius: 15px;
     border-width: 3px;
     border-color: black;
