--- a/src/components/Counter/style.css
+++ b/src/components/Counter/style.css
@@ -1,11 +1,11 @@
-.countContainer {
+.count-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }  
 
-.countContainerContador {
+.count-container-contador {
     display: grid;
     grid-template: 1fr / 1fr 1fr 1fr;
     width: 140px;
@@ -16,7 +16,7 @@
 }
 
   
-.countContainerButton {
+.count-container-button {
     color: var(--primary-color);
     width: 100%;
     height: 100%;
@@ -25,23 +25,21 @@
     transition: all 250ms ease-out;
 }
 
-.countContainerButton:hover {
+.count-container-button:hover {
     border: none;
     color: var(--just-white);
     background-color: var(--primary-color);
-    font-family: cursive ;
 }
   
-.countContainerButton[disabled] {
+.count-container-button[disabled] {
     color: var(--border-color);
     background-color: transparent;
     border: 1px solid var(--border-color);
 }
   
-.countContainerQty {
+.count-container-qty {
     text-align: center;
     height: 100%;
-    padding-top: 10px;
-    color: var(--primary-color);
-    background-color: var(--just-white);
+    padding: 15px;
+    box-sizing: border-box;
 }
